--- a/foundation/Dockerfile
+++ b/foundation/Dockerfile
@@ -2,7 +2,7 @@ FROM php:7.3-apache
 
 RUN export DEBIAN_FRONTEND=noninteractive
 
-RUN curl -o /usr/share/ca-certificates/NTUT_CA.pem https://cnc.ntut.edu.tw/var/file/4/1004/img/1183/NTUT_Computer_And_Network_Center_Root_CA.cer
+COPY /NTUT_Computer_And_Network_Center_Root_CA.cer /usr/share/ca-certificates/
 RUN update-ca-certificates --fresh
 
 RUN apt clean
