--- a/foundation/Dockerfile
+++ b/foundation/Dockerfile
@@ -2,7 +2,7 @@ FROM php:7.3-apache
 
 RUN export DEBIAN_FRONTEND=noninteractive
 
-COPY /NTUT_Computer_And_Network_Center_Root_CA.crt /usr/share/ca-certificates/
+RUN wget -q https://raw.githubusercontent.com/JoeyChen-NTUT/php-7.3-apache/master/NTUT_Computer_And_Network_Center_Root_CA.crt -p /usr/share/ca-certificates/
 RUN update-ca-certificates --fresh
 
 RUN apt clean
