--- a/gpsa/Dockerfile
+++ b/gpsa/Dockerfile
@@ -2,7 +2,7 @@ FROM php:7.3-apache
 
 RUN export DEBIAN_FRONTEND=noninteractive
 
-RUN wget -q https://raw.githubusercontent.com/JoeyChen-NTUT/php-7.3-apache/master/NTUT_Computer_And_Network_Center_Root_CA.crt -p /usr/share/ca-certificates/
+RUN curl -o /usr/share/ca-certificates/NTUT_CA.pem https://raw.githubusercontent.com/JoeyChen-NTUT/php-7.3-apache/master/NTUT_Computer_And_Network_Center_Root_CA.crt
 RUN update-ca-certificates --fresh
 
 RUN apt-get clean
