--- a/istreamplayer/Dockerfile
+++ b/istreamplayer/Dockerfile
@@ -20,8 +20,8 @@ RUN sed -i -e 's/max_execution_time = 30/max_execution_time = 300/g' /usr/local/
     sed -i -e 's/max_input_time = 60/max_input_time = 120/g' /usr/local/etc/php/php.ini
     
 RUN find /etc/apache2/sites-enabled/* -exec sed -i 's/#*[Cc]ustom[Ll]og/#CustomLog/g' {} \;
-RUN find /etc/apache2/sites-enabled/* -exec sed -i 's/#*[Ee]rror[Ll]og/#ErrorLog/g' {} \;
-RUN sed -i -e 's/#*[Ee]rror[Ll]og/#ErrorLog/g' /etc/apache2/apache2.conf ;
+#RUN find /etc/apache2/sites-enabled/* -exec sed -i 's/#*[Ee]rror[Ll]og/#ErrorLog/g' {} \;
+#RUN sed -i -e 's/#*[Ee]rror[Ll]og/#ErrorLog/g' /etc/apache2/apache2.conf ;
 
 #enable mods
 RUN a2enmod rewrite
