--- a/lectureadmin/Dockerfile
+++ b/lectureadmin/Dockerfile
@@ -1,7 +1,6 @@
 FROM php:7.4-apache
 
-COPY /NTUT_Computer_And_Network_Center_Root_CA.crt /usr/share/ca-certificates/NTUT_CA.pem
-#RUN curl -o /usr/share/ca-certificates/NTUT_CA.pem https://cnc.ntut.edu.tw/var/file/4/1004/img/1183/NTUT_Computer_And_Network_Center_Root_CA.crt
+RUN curl -o /usr/share/ca-certificates/NTUT_CA.pem https://cnc.ntut.edu.tw/var/file/4/1004/img/1183/NTUT_Computer_And_Network_Center_Root_CA.crt
 RUN update-ca-certificates --fresh
 
 RUN export DEBIAN_FRONTEND=noninteractive
