--- a/document-control/Dockerfile
+++ b/document-control/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:7.4-apache
 
-RUN curl -o /usr/share/ca-certificates/NTUT_CA.pem https://raw.githubusercontent.com/JoeyChen-NTUT/php-7.3-apache/master/NTUT_Computer_And_Network_Center_Root_CA.crt
+RUN curl -o /usr/local/share/ca-certificates/NTUT_CA.crt https://raw.githubusercontent.com/JoeyChen-NTUT/php-7.3-apache/master/NTUT_Computer_And_Network_Center_Root_CA.crt
 RUN update-ca-certificates --fresh
 
 RUN export DEBIAN_FRONTEND=noninteractive
