--- a/lectureadmin/Dockerfile-API
+++ b/lectureadmin/Dockerfile-API
@@ -34,6 +34,7 @@ COPY csdk.tar.partah /tmp/csdk.tar.partah
 RUN cat /tmp/csdk.tar.parta* > /tmp/csdk.tar && \
     mkdir /tmp/csdk && \
     tar -xvf /tmp/csdk.tar -C /tmp/csdk && \
+    cd /tmp/csdk && \
     ./installclientsdk -i silent -DLICENSE_ACCEPTED=TRUE
 
 #enable mods
