--- a/lectureadmin/Dockerfile-API
+++ b/lectureadmin/Dockerfile-API
@@ -40,10 +40,10 @@ RUN cat /tmp/csdk.tar.parta* > /tmp/csdk.tar && \
 RUN cd /tmp/csdk && \
     ./installclientsdk -i silent -DLICENSE_ACCEPTED=TRUE
 
-RUN echo "EXPORT INFORMIXDIR="/opt/IBM/Informix_Client-SDK" >> /root/.bashrc
-RUN echo "EXPORT LD_LIBRARY_PATH=$INFORMIXDIR/lib/esql:$INFORMIXDIR/lib" >> /root/.bashrc
-RUN echo "EXPORT SHLIB_PATH=$INFORMIXDIR/lib/esql" >> /root/.bashrc
-RUN echo "EXPORT LIBPATH=$INFORMIXDIR/lib/esql" >> /root/.bashrc
+RUN echo "export INFORMIXDIR="/opt/IBM/Informix_Client-SDK" >> /root/.bashrc
+RUN echo "export LD_LIBRARY_PATH=$INFORMIXDIR/lib/esql:$INFORMIXDIR/lib" >> /root/.bashrc
+RUN echo "export SHLIB_PATH=$INFORMIXDIR/lib/esql" >> /root/.bashrc
+RUN echo "export LIBPATH=$INFORMIXDIR/lib/esql" >> /root/.bashrc
 
 RUN apt-get install unixodbc unixodbc-dev libncurses5 -y
 RUN docker-php-ext-configure pdo_odbc --with-pdo-odbc=unixODBC,/usr \
