--- a/lectureadmin/Dockerfile-API
+++ b/lectureadmin/Dockerfile-API
@@ -41,10 +41,10 @@ RUN cat /tmp/csdk.tar.parta* > /tmp/csdk.tar && \
 RUN cd /tmp/csdk && \
     ./installclientsdk -i silent -DLICENSE_ACCEPTED=TRUE
 
-RUN echo "export INFORMIXDIR=/opt/IBM/Informix_Client-SDK" >> /root/.bashrc
-RUN echo "export LD_LIBRARY_PATH=$INFORMIXDIR/lib/esql:$INFORMIXDIR/lib:$INFORMIXDIR/cli" >> /root/.bashrc
-RUN echo "export SHLIB_PATH=$INFORMIXDIR/lib/esql" >> /root/.bashrc
-RUN echo "export LIBPATH=$INFORMIXDIR/lib/esql" >> /root/.bashrc
+RUN echo 'export INFORMIXDIR="/opt/IBM/Informix_Client-SDK"' >> /root/.bashrc
+RUN echo 'export LD_LIBRARY_PATH="$INFORMIXDIR/lib/esql:$INFORMIXDIR/lib:$INFORMIXDIR/cli"' >> /root/.bashrc
+RUN echo 'export SHLIB_PATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc
+RUN echo 'export LIBPATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc
 
 RUN docker-php-ext-configure pdo_odbc --with-pdo-odbc=unixODBC,/usr \
  && docker-php-ext-install pdo_odbc
