--- a/lectureadmin/Dockerfile-API
+++ b/lectureadmin/Dockerfile-API
@@ -42,7 +42,7 @@ RUN cd /tmp/csdk && \
     ./installclientsdk -i silent -DLICENSE_ACCEPTED=TRUE
 
 RUN echo 'export INFORMIXDIR="/opt/IBM/Informix_Client-SDK"' >> /root/.bashrc
-RUN echo 'export LD_LIBRARY_PATH="$INFORMIXDIR/lib:$INFORMIXDIR/lib/esql:$INFORMIXDIR/cli"' >> /root/.bashrc
+RUN echo 'export LD_LIBRARY_PATH="$INFORMIXDIR/lib:$INFORMIXDIR/lib/esql:$INFORMIXDIR/cli:$LD_LIBRARY_PATH"' >> /root/.bashrc
 RUN echo 'export SHLIB_PATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc
 RUN echo 'export LIBPATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc
 
