--- a/lectureadmin/Dockerfile-API
+++ b/lectureadmin/Dockerfile-API
@@ -25,14 +25,7 @@ RUN docker-php-ext-install pdo pdo_mysql sockets && docker-php-ext-enable pdo pd
 #install odbc and informix
 RUN apt-get install unixodbc unixodbc-dev libncurses5 -y
 
-COPY csdk.tar.partaa /tmp/csdk.tar.partaa
-COPY csdk.tar.partab /tmp/csdk.tar.partab
-COPY csdk.tar.partac /tmp/csdk.tar.partac
-COPY csdk.tar.partad /tmp/csdk.tar.partad
-COPY csdk.tar.partae /tmp/csdk.tar.partae
-COPY csdk.tar.partaf /tmp/csdk.tar.partaf
-COPY csdk.tar.partag /tmp/csdk.tar.partag
-COPY csdk.tar.partah /tmp/csdk.tar.partah
+COPY csdk.tar.parta* /tmp/
 
 RUN cat /tmp/csdk.tar.parta* > /tmp/csdk.tar && \
     mkdir /tmp/csdk && \
