--- a/lectureadmin/Dockerfile-API
+++ b/lectureadmin/Dockerfile-API
@@ -19,6 +19,30 @@ RUN sed -i -e 's/max_execution_time = 30/max_execution_time = 300/g' /usr/local/
     sed -i -e 's/max_file_uploads = 20/max_file_uploads = 300/g' /usr/local/etc/php/php.ini && \
     sed -i -e 's/max_input_time = 60/max_input_time = 120/g' /usr/local/etc/php/php.ini
 
+#install zip extensions
+RUN apt-get install -y \
+        libzip-dev \
+        zip \
+  && docker-php-ext-configure zip \
+  && docker-php-ext-install zip
+
+#install gd extensions
+RUN apt-get install -y \
+    libfreetype6-dev \
+        libmcrypt-dev \
+        libjpeg-dev \
+        libpng-dev \
+        libmcrypt-dev \
+    && docker-php-ext-configure gd \
+#        --enable-gd-native-ttf \
+        --with-freetype-dir=/usr/include/freetype2 \
+        --with-png-dir=/usr/include \
+        --with-jpeg-dir=/usr/include \
+    && docker-php-ext-install gd \
+    && docker-php-ext-install mbstring \
+    && docker-php-ext-enable gd
+   
+
 #install mysqli extensions
 RUN docker-php-ext-install pdo pdo_mysql sockets && docker-php-ext-enable pdo pdo_mysql sockets
 
