--- a/lectureadmin/Dockerfile-API
+++ b/lectureadmin/Dockerfile-API
@@ -65,8 +65,18 @@ RUN echo 'export LIBPATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc
 RUN echo 'export ODBCINI="/etc/odbc.ini"' >> /root/.bashrc
 RUN echo 'export ODBCSYSINI="/etc"' >> /root/.bashrc
 
-RUN docker-php-ext-configure pdo_odbc --with-pdo-odbc=unixODBC,/usr \
- && docker-php-ext-install pdo_odbc
+# Install PHP odbc extension
+# https://github.com/docker-library/php/issues/103
+RUN set -x \
+    && docker-php-source extract \
+    && cd /usr/src/php/ext/odbc \
+    && phpize \
+    && sed -ri 's@^ *test +"\$PHP_.*" *= *"no" *&& *PHP_.*=yes *$@#&@g' configure \
+    && ./configure --with-unixODBC=shared,/usr \
+    && docker-php-ext-install odbc \
+    && docker-php-source delete
+#RUN docker-php-ext-configure pdo_odbc --with-pdo-odbc=unixODBC,/usr \
+# && docker-php-ext-install pdo_odbc
 
 
 #enable mods
