--- a/lectureadmin/Dockerfile-API
+++ b/lectureadmin/Dockerfile-API
@@ -33,6 +33,7 @@ RUN apt-get install -y \
         libjpeg-dev \
         libpng-dev \
         libmcrypt-dev \
+        libonig-dev \
     && docker-php-ext-configure gd \
 #        --enable-gd-native-ttf \
 #        --with-freetype-dir=/usr/include/freetype2 \
