--- a/lectureadmin/Dockerfile-API
+++ b/lectureadmin/Dockerfile-API
@@ -59,23 +59,19 @@ RUN cat /tmp/csdk.tar.parta* > /tmp/csdk.tar && \
 RUN cd /tmp/csdk && \
     ./installclientsdk -i silent -DLICENSE_ACCEPTED=TRUE
 
-RUN cat << EOF >> /root/.bashrc
-'export INFORMIXDIR="/opt/IBM/Informix_Client-SDK"''
-'export LD_LIBRARY_PATH="$INFORMIXDIR/lib:$INFORMIXDIR/lib/esql:$INFORMIXDIR/cli:$LD_LIBRARY_PATH"'
-'export SHLIB_PATH="$INFORMIXDIR/lib/esql"'
-'export LIBPATH="$INFORMIXDIR/lib/esql"'
-'export ODBCINI="/etc/odbc.ini"'
-'export ODBCSYSINI="/etc"'
-EOF
+echo 'export INFORMIXDIR="/opt/IBM/Informix_Client-SDK"' >> /root/.bashrc
+echo 'export LD_LIBRARY_PATH="$INFORMIXDIR/lib:$INFORMIXDIR/lib/esql:$INFORMIXDIR/cli:$LD_LIBRARY_PATH"' >> /root/.bashrc
+echo 'export SHLIB_PATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc
+echo 'export LIBPATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc
+echo 'export ODBCINI="/etc/odbc.ini"' >> /root/.bashrc
+echo 'export ODBCSYSINI="/etc"' >> /root/.bashrc
 
-RUN cat << EOF >> /etc/apache2/envvars
-'export INFORMIXDIR="/opt/IBM/Informix_Client-SDK"''
-'export LD_LIBRARY_PATH="$INFORMIXDIR/lib:$INFORMIXDIR/lib/esql:$INFORMIXDIR/cli:$LD_LIBRARY_PATH"'
-'export SHLIB_PATH="$INFORMIXDIR/lib/esql"'
-'export LIBPATH="$INFORMIXDIR/lib/esql"'
-'export ODBCINI="/etc/odbc.ini"'
-'export ODBCSYSINI="/etc"'
-EOF
+echo 'export INFORMIXDIR="/opt/IBM/Informix_Client-SDK"' >> /etc/apache2/envvars
+echo 'export LD_LIBRARY_PATH="$INFORMIXDIR/lib:$INFORMIXDIR/lib/esql:$INFORMIXDIR/cli:$LD_LIBRARY_PATH"' >> /etc/apache2/envvars
+echo 'export SHLIB_PATH="$INFORMIXDIR/lib/esql"' >> /etc/apache2/envvars
+echo 'export LIBPATH="$INFORMIXDIR/lib/esql"' >> /etc/apache2/envvars
+echo 'export ODBCINI="/etc/odbc.ini"' >> /etc/apache2/envvars
+echo 'export ODBCSYSINI="/etc"' >> /etc/apache2/envvars
 
 # Install PHP odbc extension
 # https://github.com/docker-library/php/issues/103
