--- a/lectureadmin/Dockerfile-API
+++ b/lectureadmin/Dockerfile-API
@@ -59,18 +59,18 @@ RUN cat /tmp/csdk.tar.parta* > /tmp/csdk.tar && \
 RUN cd /tmp/csdk && \
     ./installclientsdk -i silent -DLICENSE_ACCEPTED=TRUE
 
-echo 'export INFORMIXDIR="/opt/IBM/Informix_Client-SDK"' >> /root/.bashrc
-echo 'export LD_LIBRARY_PATH="$INFORMIXDIR/lib:$INFORMIXDIR/lib/esql:$INFORMIXDIR/cli:$LD_LIBRARY_PATH"' >> /root/.bashrc
-echo 'export SHLIB_PATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc
-echo 'export LIBPATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc
-echo 'export ODBCINI="/etc/odbc.ini"' >> /root/.bashrc
+RUN echo 'export INFORMIXDIR="/opt/IBM/Informix_Client-SDK"' >> /root/.bashrc && \
+echo 'export LD_LIBRARY_PATH="$INFORMIXDIR/lib:$INFORMIXDIR/lib/esql:$INFORMIXDIR/cli:$LD_LIBRARY_PATH"' >> /root/.bashrc && \
+echo 'export SHLIB_PATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc && \
+echo 'export LIBPATH="$INFORMIXDIR/lib/esql"' >> /root/.bashrc && \
+echo 'export ODBCINI="/etc/odbc.ini"' >> /root/.bashrc && \
 echo 'export ODBCSYSINI="/etc"' >> /root/.bashrc
 
-echo 'export INFORMIXDIR="/opt/IBM/Informix_Client-SDK"' >> /etc/apache2/envvars
-echo 'export LD_LIBRARY_PATH="$INFORMIXDIR/lib:$INFORMIXDIR/lib/esql:$INFORMIXDIR/cli:$LD_LIBRARY_PATH"' >> /etc/apache2/envvars
-echo 'export SHLIB_PATH="$INFORMIXDIR/lib/esql"' >> /etc/apache2/envvars
-echo 'export LIBPATH="$INFORMIXDIR/lib/esql"' >> /etc/apache2/envvars
-echo 'export ODBCINI="/etc/odbc.ini"' >> /etc/apache2/envvars
+RUN echo 'export INFORMIXDIR="/opt/IBM/Informix_Client-SDK"' >> /etc/apache2/envvars && \
+echo 'export LD_LIBRARY_PATH="$INFORMIXDIR/lib:$INFORMIXDIR/lib/esql:$INFORMIXDIR/cli:$LD_LIBRARY_PATH"' >> /etc/apache2/envvars && \
+echo 'export SHLIB_PATH="$INFORMIXDIR/lib/esql"' >> /etc/apache2/envvars && \
+echo 'export LIBPATH="$INFORMIXDIR/lib/esql"' >> /etc/apache2/envvars && \
+echo 'export ODBCINI="/etc/odbc.ini"' >> /etc/apache2/envvars && \
 echo 'export ODBCSYSINI="/etc"' >> /etc/apache2/envvars
 
 # Install PHP odbc extension
