--- a/netflow/Dockerfile
+++ b/netflow/Dockerfile
@@ -18,6 +18,9 @@ RUN sed -i -e 's/max_execution_time = 30/max_execution_time = 300/g' /usr/local/
     sed -i -e 's/;date.timezone =/date.timezone = Asia\/Taipei/g' /usr/local/etc/php/php.ini && \
     sed -i -e 's/max_file_uploads = 20/max_file_uploads = 300/g' /usr/local/etc/php/php.ini && \
     sed -i -e 's/max_input_time = 60/max_input_time = 120/g' /usr/local/etc/php/php.ini
+    
+RUN docker-php-ext-install pdo && docker-php-ext-enable pdo
+RUN docker-php-ext-install pdo_mysql && docker-php-ext-enable pdo_mysql
 
 #enable mods
 RUN a2enmod rewrite
